--- a/index.css
+++ b/index.css
@@ -115,7 +115,7 @@ font-family: Arial;
 	figure img {width: 100%;}
 	.lcolumn { width: 100%; padding: 0; }
 	nav a { float: none; width: 100%; }
-	footer { font-size: 18px; }
+	footer h2 a { font-size: 18px; }
 }
 
 }
